--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gerson Berrocal <gwrsonberrocal@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.3"
   }
